# task-3-networks

./: README.md
Will2/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  configure~  current_date.sh  factorial.c
Will2/autom4te.cache/: output.1  output.2  requests  traces.0  traces.2
will/: Makefile
